--- a/_includes/news.html
+++ b/_includes/news.html
@@ -13,7 +13,7 @@
               {% endif %}
               {% for item in news limit: news_limit %}
                 <tr>
-                  <th scope="row">{{ item.date | date: "%b %-Y" }}</th>
+                  <th scope="row" style="width: 6em">{{ item.date | date: "%b %-Y" }}</th>
                   <td>
                     {% if item.inline -%}
                       {{ item.content | remove: '<p>' | remove: '</p>' | emojify }}
