--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,5 +1,5 @@
 
           <div class="publications">
-            <h2>Publications</h2>
-            {% bibliography -f papers -q @*[selected=true]* %}
+            <h2 style="font-weight: 400!important;">Publications</h2>
+            {% bibliography -f {{ site.scholar.bibliography }} --group_by none --query @*[selected=true]* %}
           </div>
