does pub work now?

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,5 +1,5 @@
 
-          <div class="news">
+          <div class="news" style="margin-top: 2rem;"">
             <h2 style="font-weight: 400!important;">News</h2>
             {% if site.news != blank -%}
             {%- assign news_size = site.news | size -%}
